Add - Improving API responses, adding styles to the e-commerce web

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .hero {
-  background-image: url("https://via.placeholder.com/1920x1080");
+  background-image: url("/e-commerce-1920-x-1080-wallpaper-4w0dly7sr76xiytd.jpg");
+  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
